src/components/navbar/placement.css
@utility navbar-start {
  --x-start: start;

  justify-self: var(--x-start);
  flex-direction: row;

  & > :where(.navbar-list) {
    flex-direction: row;
    justify-content: var(--x-start);
    align-items: center;
    column-gap: 0.5rem;
  }

  & > :where(.navbar-list > li) {
    width: auto;
  }
}

@utility navbar-center {
  --x-center: center;

  justify-self: var(--x-center);
  flex-direction: row;

  & > :where(.navbar-list) {
    flex-direction: row;
    justify-content: var(--x-center);
    align-items: center;
    column-gap: 0.5rem;
  }

  & > :where(.navbar-list > li) {
    width: auto;
  }
}

@utility navbar-end {
  --x-end: end;

  justify-self: var(--x-end);
  flex-direction: row;

  & > :where(.navbar-list) {
    flex-direction: row;
    justify-content: var(--x-end);
    align-items: center;
    column-gap: 0.5rem;
  }

  & > :where(.navbar-list > li) {
    width: auto;
  }
}

@utility navbar-top {
  --y-start: start;

  justify-content: var(--y-start);
  flex-direction: column;
  row-gap: 0.75rem;

  & > :where(.navbar-list) {
    flex-direction: column;
    align-items: start;
    row-gap: 0.25rem;
  }
}

@utility navbar-middle {
  --y-center: center;

  justify-content: var(--y-center);
  flex-direction: column;
  row-gap: 0.75rem;

  & > :where(.navbar-list) {
    flex-direction: column;
    align-items: start;
    row-gap: 0.25rem;
  }
}

@utility navbar-bottom {
  --y-end: end;

  justify-content: var(--y-end);
  flex-direction: column;
  row-gap: 0.75rem;

  & > :where(.navbar-list) {
    flex-direction: column;
    align-items: start;
    row-gap: 0.25rem;
  }
}

